<resources>
    <string name="app_name">"Summoner'sCompanion "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_wrong">Something wrong, please try again later.</string>
    <string name="attack">Attack</string>
    <string name="defence">Defence</string>
    <string name="ability">Ability</string>
    <string name="dificulty">Difficultly</string>
    <string name="health_">Health:</string>
    <string name="energy">Energy:</string>
    <string name="attack_">Attack:</string>
    <string name="armor">Armor:</string>
    <string name="range_">Range:</string>
    <string name="health_regen_">Health Regen:</string>
    <string name="mana_regen_">Mana Regen:</string>
    <string name="attack_speech_">Attack Speed:</string>
    <string name="magic_resist_">Magic Resist:</string>
    <string name="movement_">Movement:</string>
    <string name="lore">Lore</string>
    <string name="loading"></string>
    <string name="not_internet_connected">Can not connect to server, please check internet connection.</string>
    <string name="overview">OVERVIEW</string>
    <string name="_default">Default</string>
    <string name="tips">Tips</string>
    <string name="counter_tips">Counter Tips</string>
    <string name="counter_and_tip"><![CDATA[COUNTERS & TIPS]]></string>
    <string name="cool_down">Cooldown</string>
    <string name="cost">Cost</string>
    <string name="range">Range</string>
    <string name="abilities">ABILITES</string>
    <string name="description">DESCRIPTION</string>
    <string name="build_from">Built from</string>
    <string name="build_into">Built into</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Input something</string>
    <string name="cuning">CUNING</string>
    <string name="resolve">RESOLVE</string>
    <string name="ferocity">FEROCITY</string>
    <string name="mastery">Masteries</string>
    <string name="runes">Runes</string>
    <string name="no_match_found">No match found</string>
    <string name="dame_dealt">Damage Dealt</string>
    <string name="statistics">Statistics</string>
    <string name="damage_taken">Damage Taken</string>
    <string name="gold_earned">Gold Earned</string>
    <string name="healing_done">Healing Done</string>
    <string name="largest_killing_spree">Largest Killing Spree</string>
    <string name="largest_multi_kill">Largest Multi Kill</string>
    <string name="magic_dame_dealt">Magic Damage Dealt</string>
    <string name="physical_damage_dealt">Physical Damage Dealt</string>
    <string name="minions_kill">Minions Killed</string>
    <string name="neatural_minions_killed">Neatural Minions Killed</string>
    <string name="magic_dame_taken">Magic Damage Taken</string>
    <string name="physic_damge_taken">Physical Damage Taken</string>
    <string name="crowd_control_dealt">Crowd Control Dealt (s)</string>
    <string name="turrets_destroyed">Turrets Destroyed</string>
    <string name="inhibitors_destroyed">Inhibitors Destroyed</string>
    <string name="wards_placed">Wards Placed</string>
    <string name="ip_earned">IP Earned</string>
    <string name="penta_kill">Penta Kills</string>
    <string name="teams">Teams</string>
    <string name="quadra_kills">Quadra Kills</string>
    <string name="triple_kills">Triple Kills</string>
    <string name="double_kills">Double Kills</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="assists">Assists</string>
    <string name="most_dealt">Most Dealt</string>
    <string name="most_kill">Most Kills</string>
    <string name="match_story">MATCH HISTORY</string>
    <string name="champions">CHAMPIONS</string>
    <string name="wins">Wins</string>
    <string name="most_play">Most Played</string>
    <string name="ranks">Ranked</string>
    <string name="unranked">UNRANKED</string>
    <string name="team_5v5">Team 5v5</string>
    <string name="team_3v3">Team 3v3</string>
    <string name="solo_duo">Solo/Duo</string>
    <string name="soming_was_wrong">Somthing was wrong, please try again.</string>
    <string name="kda">kda</string>
    <string name="take_down">Take down</string>
    <string name="minions">Minions</string>
    <string name="win_rate">Winrate</string>
    <string name="average">Averages</string>
    <string name="wins_lose">Wins/Loses</string>
    <string name="turet_kill">Turret kills</string>
    <string name="show_challange">Show Challange</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="points">Points</string>
    <string name="id">ID</string>
    <string name="w_l">W/L</string>
    <string name="search_sommoner">Search Summoner</string>
    <string name="sumoner">Summoners</string>
    <string name="champions_">Champions</string>
    <string name="items">Items</string>
    <string name="choose_region">Choose Region...</string>
</resources>
